[gd_scene load_steps=12 format=2]

[ext_resource path="res://Camera2D.gd" type="Script" id=1]
[ext_resource path="res://themes/debug.tres" type="Theme" id=2]
[ext_resource path="res://DistrictButtons.gd" type="Script" id=3]
[ext_resource path="res://UI/Submit.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Matrix.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/ActionButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://font/Inter-VariableFont_slnt,wght.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://themes/popularvote.tres" type="Theme" id=8]
[ext_resource path="res://Main/main.gd" type="Script" id=9]
[ext_resource path="res://UI/Victory.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 7 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 9 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Submit" parent="UI" instance=ExtResource( 4 )]
margin_left = 40.0
margin_top = 860.0
margin_right = 326.0
margin_bottom = 1035.0

[node name="DistrictButtons" type="VBoxContainer" parent="UI"]
margin_left = 1600.0
margin_top = 1.0
margin_right = 1820.0
margin_bottom = 1074.0
theme = ExtResource( 8 )
custom_constants/separation = 20
alignment = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugButton" parent="UI" instance=ExtResource( 6 )]
visible = false
margin_left = 68.0
margin_top = 977.0
margin_right = 288.0
margin_bottom = 1027.0

[node name="Debug" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorLabel" type="Label" parent="UI/Debug"]
margin_left = 1000.0
margin_top = 100.0
margin_right = 1168.0
margin_bottom = 185.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="UI/Debug"]
margin_right = 40.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModeLabel" type="Label" parent="UI/Debug/HBox"]
margin_bottom = 68.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TilesLeftLabel" type="Label" parent="UI/Debug/HBox"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 68.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SquaresFilledLabel" type="Label" parent="UI/Debug/HBox"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 68.0
theme = ExtResource( 2 )

[node name="Victory" parent="UI" instance=ExtResource( 10 )]
visible = false

[node name="State" type="ViewportContainer" parent="."]
margin_right = 1303.0
margin_bottom = 774.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="State"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="State/Area2D"]
position = Vector2( 449, 41 )
polygon = PoolVector2Array( 335, 252, 437, 163, 638, 245, 709, 421, 823, 654, 448, 821, 231, 742, 225, 421, 240, 352 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="State"]
script = ExtResource( 1 )

[node name="Matrix" parent="State" instance=ExtResource( 5 )]
